<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mnuRestart"
        android:icon="@drawable/ic_restart"
        android:title="@string/mnuRestartText"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/mnuPlayerName"
        android:title="@string/playerNameText"
        app:showAsAction="never" />

    <item android:id="@+id/mnuHome"
        android:title="@string/mnuHomeText"
        app:showAsAction="never" />

    <item android:id="@+id/mnuLeaderboard"
        android:title="@string/leaderboardText"
        app:showAsAction="never" />

    <item android:id="@+id/mnuInstructions"
        android:title="@string/howToPlayText"
        app:showAsAction="never" />

</menu>